[package]
name = "teleporter"
version = "0.0.3"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", default-features = false, features = ["std"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "ansi",
    "tracing-log",
] }
tracing-log = { version = "0.2.0", default-features = false, features = [
    "std",
    "log-tracer",
] }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
phf = { version = "0.11.3", features = ["macros"] }
chrono = { version = "0.4.40", default-features = false, features = ["std"] }
governor = { version = "0.8.1", default-features = false, features = [
    "std",
    "dashmap",
] }
dashmap = { version = "6.1.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
flate2 = { version = "1.1.0" }
rand = { version = "0.9.0", default-features = false, features = [
    "std",
    "std_rng",
] }
base64 = { version = "0.22.1", default-features = false }
uuid = { version = "1.16.0", default-features = false, features = [
    "v4",
    "std",
] }
html-escape = { version = "0.2.13" }
percent-encoding = { version = "2.3.1", default-features = false }
regex = { version = "1.11.1", default-features = false }
tempfile = { version = "3.19.0" }
infer = { version = "0.19.0", default-features = false, features = ["std"] }
mime_guess = { version = "2.0.5", default-features = false }
rgb = { version = "0.8.50", default-features = false }
image = { version = "0.25.5" }
webp = { version = "0.3.0" }
gif = { version = "0.13.1" }
rlottie = { version = "0.5.2" }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = [
    "std",
] }
serde_json_path = { version = "0.7.2", default-features = false }
sea-orm = { version = "1.1.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "1.1.7", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = [
    "macros",
    "fs",
    "process",
    "signal",
    "rt-multi-thread",
] }
tokio-tungstenite = { version = "0.26.2" }
reqwest = { version = "0.12.15", default-features = false, features = [
    "native-tls",
    "stream",
] }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", default-features = false }
grammers-client = { git = "https://github.com/Lonami/grammers", default-features = false, features = [
    "html",
    "proxy",
] }
tantivy = { version = "0.22.0", default-features = false, features = [
    "mmap",
    "stopwords",
    "zstd-compression",
] }
tantivy-jieba = "0.11.0"
